--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+cargo-features = ["codegen-backend"]
 [package]
 name = "civ"
 version = "0.1.0"
@@ -7,7 +8,14 @@ edition = "2021"
 env_logger = "0.10"
 error-iter = "0.4"
 image = "0.25.4"
+itertools = "0.13.0"
 log = "0.4"
+noise = {version = "0.9.0", features = ["images"]}
 pixels = "0.14.0"
+rand = "0.8.5"
 winit = { version = "0.29", features = ["rwh_05"]}
 winit_input_helper = "0.15"
+
+[profile.dev]
+debug = 0
+codegen-backend = "cranelift"
